<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_version">Ver:</string>
    <string name="system_time">Time:</string>
    <string name="app_name">Printer</string>
    <string name="action_settings">Set</string>
    <string name="hello_world">Hello world!</string>
	<string name="ControlTab">Control</string>
	<string name="manualCtrlTab">Control man</string>
	<string name="Edit">Edit</string>
	<string name="Settings">Settings</string>
	<string name="str_btn_start">Start</string>
	<string name="str_btn_stop">Stop</string>
	<string name="str_btn_clean">Purge</string>
	<string name="str_btn_open">Open</string>
	<string name="str_remain_ink">Ink</string>
	<string name="str_remain_ptimes">Total</string>
	<string name="str_btn_new">New</string>
	<string name="str_btn_save">Save</string>
	<string name="str_btn_saveprint">Save&#038;Print</string>
	<string name="str_btn_cancel">Cancel</string>
	<string name="str_ip_add">Ip Addr</string>
	<string name="str_device_number">Device:</string>
	<string name="str_dialog_surecancel">warning:</string>
	<string name="str_device_but_sure">Sure</string>
	<string name="str_ip_ed">Please set IP and try again</string>
	<string name="str_print_documents"></string>
	<string name="str_port">Port</string>
	<string name="str_information">Do you want to execute?</string>
	<string name="str_btn_saveas">Saveas</string>
	<string name="str_btn_prerecord">Up</string>
	<string name="str_btn_nextrecord">Down</string>
	<string name="str_btn_send">Send</string>
	<string name="str_btn_set">Set</string>
	<string name="str_btn_get">Text</string>
	<string name="str_btn_print">Print</string>
	<string name="str_btn_finish">Finish</string>
	<string name="str_btn_header1">Pen1</string>
	<string name="str_btn_header2">Pen2</string>
	<string name="str_btn_header3">Pen3</string>
	<string name="str_btn_header4">Pen4</string>
	<string name="strDate">Date:</string>
	<string name="strInklevel">Remain </string>
	<string name="strPhotocellState">Photocell</string>
	<string name="strEncoderState">Encoder</string>
	<string name="strPrintstate">Printing：</string>
	<string name="strPrinting">Printing</string>
	<string name="strPrintok">Ready</string>
	<string name="strOn">On</string>
	<string name="strOff">Off</string>
	<string name="strwaitting">printing......</string>
	<string name="str_csvfile">Csv</string>
	<string name="str_tlkfile">Tlk</string>
	<string name="str_binfile">Open</string>
	<string name="str_openfile">Open...</string>
	<string name="str_mvforward">Forward</string>
	<string name="str_mvbackward">Backward</string>
	<string name="str_preview">Preview</string>
	<string name="str_del">Delete</string>
	<string name="str_multi_select">Group</string>
	<string name="str_btn_shift">Shift</string>
	<string name="str_btn_second">Second</string>
	<string name="str_btn_upgrade">Upgrade</string>
	<string name="str_btn_setDate">Set Date</string>
	<string name="str_btn_setTime">Set Time</string>
	<string name="str_btn_image">Logo</string>
	<string name="str_net_device_ink">Ink</string>
	<string name="str_goto">goto</string>
	<string name="strWidth">Width</string>
	<string name="strHigh">Height</string>
	<string name="strHightype">Stepwise</string>
	<string name="strReverse">Reverse</string>
	<string name="strXcor">X-Cor</string>
	<string name="strYcor">Y-Cor</string>
	<string name="strCnt">Content</string>
	<string name="strDefault">0</string>
	<string name="txtDefault">text</string>
	<string name="strDragable">Dragable</string>
	<string name="strShow">Show</string>
	<string name="strFontsize">Font Size</string>
	<string name="strFont">Font</string>
	<string name="strLinewidth">Line Width</string>
	<string name="strBits">Digits</string>
	<string name="strImage">Image</string>
	<string name="strDirect">Direction</string>
	<string name="strShift1">Shift1</string>
	<string name="strShift2">Shift2</string>
	<string name="strShift3">Shift3</string>
	<string name="strShift4">Shift4</string>
	<string name="strShift5">Shift5</string>
	<string name="strInfoname">Object</string>
	<string name="strHeadType">PenType</string>
	<string name="strHeadResolution">Resolution</string>
	<string name="strUpgradeConfirm">Do upgrade?</string>
	<string name="strUpgradeNoApk">No Upgrade file!!!</string>
	<string name="strSaving">saving, please wait...</string>
	<string name="strLoading">loading, please wait...</string>
	<string name="strCopying">Copying, please wait...</string>
	<string name="strInsertSerial">Please connect device...</string>
	<string name="strReinsertSerial">Error, please reconnect device</string>
	<string name="str_net_error">Network communication error</string>
	<string-array name="strPrinterArray">
	    <item>12.7 mm HP fast</item>
	    <item>12.7 mm HP standard</item>
	    <item>25.4 mm HP dual</item>
	    <item>16.3 mm Xaar head</item>
	    <item>33 mm Xaar dual</item>
	    <item>38.1 mm HP Triple</item>
	    <item>50.8 mm HP quadruple</item>
	    <item>32 dot</item>
	    <item>16 dot</item>
	    <item>--</item>
	    <item>25.4mm fast ONE INCH</item>
	    <item>--</item>
	    <item>25.4mm x2 fast</item>
	    <item>9mm</item>
	    <item>nova</item>
	</string-array>
	<string-array name="strFontArray">
	    <item>0T+</item>
	    <item>1+</item>
	    <item>1B+</item>
	    <item>1B2</item>
	    <item>1BS</item>
	    <item>1T</item>
	    <item>2+</item>
	    <item>2B</item>
	    <item>2i</item>
	    <item>3+</item>
	    <item>3B</item>
	    <item>3i</item>
	    <item>3T</item>
	    <item>4</item>
	    <item>5</item>
	    <item>6</item>
	    <item>6B</item>
	    <item>7</item>
	    <item>8</item>
	    <item>9</item>
	</string-array>
	<string-array name="strFontTipsArray">
	    <item>0T+ font</item>
	    <item>1+ font</item>
	    <item>1B+ font</item>
	    <item>1B2 font</item>
	    <item>1BS font</item>
	    <item>1T font</item>
	    <item>2+ font</item>
	    <item>2B font</item>
	    <item>2i font</item>
	    <item>3+ font</item>
	    <item>3B font</item>
	    <item>3i font</item>
	    <item>3T font</item>
	    <item>4 font</item>
	    <item>5 font</item>
	    <item>6 font</item>
	    <item>6B font</item>
	    <item>7 font</item>
	    <item>8 font</item>
	    <item>9 font</item>
	</string-array>
	<string-array name="strFontFile">
	    <item>WelldrawH000</item>
	</string-array>
	<string-array name="strDirectArray">
	    <item>increase</item>
	    <item>decrease</item>
	</string-array>
	<string name="strCode">Code Type</string>
	<string-array name="strCodeArray">
	    <item>EAN8</item>
	    <item>EAN13</item>
	    <item>EAN128</item>
	    <item>CODE_128</item>
	    <item>CODE_39</item>
	    <item>UPC_A</item>
	    <item>ITF_14</item>
	    <item>QR</item>
		<item>DM</item>
	</string-array>
	<string name="strBarsource">Data</string>
	<string-array name="strLineArray">
	    <item>Solid Line</item>
	    <item>Dash Line</item>
	    <item>Dot Line</item>
	    <item>Dash Dot Line</item>
	    <item>Dash Dot Dot Line</item>
	</string-array>
	<string name="strLinetype">Line Type</string>
	<string name="str_ok">OK</string>
	<string name="strNativeBtn">Cancel</string>
	<string name="strRtFmt">Format</string>
	<string-array name="strTimeFormat">
	    <item>YY-MM-DD</item>
	    <item>MM-DD-YY</item>
	    <item>YY/MM/DD</item>
	    <item>MM/DD/YY</item>
	    <item>DD/MM/YY</item>
	    <item>YY</item>
	    <item>MM</item>
	    <item>DD</item>
	    <item>HH:NN</item>
	</string-array>
	<string-array name="strarrayCounter">
	    <item>3 bit</item>
	    <item>4 bit</item>
	    <item>5 bit</item>
	    <item>6 bit</item>
	    <item>7 bit</item>
	    <item>8 bit</item>
	    <item>9 bit</item>
	    <item>10 bit</item>
	</string-array>
	<string-array name="strarrayFontSize">
	    <item>1 mm</item>
	    <item>1.5 mm</item>
	    <item>2 mm</item>
	    <item>2.5 mm</item>
	    <item>3 mm</item>
	    <item>4 mm</item>
	    <item>5 mm</item>
	    <item>6 mm</item>
	    <item>7 mm</item>
	    <item>8 mm</item>
	    <item>9 mm</item>
	    <item>10 mm</item>
	    <item>11 mm</item>
	    <item>12 mm</item>
	    <item>12.7 mm</item>
	</string-array>
	<string name="strOffset">Offset</string>
	<string name="objectListName">Show List</string>
	<string name="objectInfoName">Show TEXT</string>
	<string name="object_Msg">TEXT</string>
	<string name="object_text">Text</string>
	<string name="object_realtime">Date</string>
	<string name="object_counter">Counter</string>
	<string name="object_bar">Barcode</string>
	<string name="object_pic">Graphic</string>
	<string name="object_julian">Julian</string>
	<string name="object_line">Line</string>
	<string name="object_rect">Rect</string>
	<string name="object_ellipse">Ellipse</string>
	<string name="object_shift">Shift</string>
	<string name="object_second">Second</string>
	<string name="object_weekofyear">WeekOfYear</string>
	<string name="object_weekday">WeekDay</string>
	<string name="object_charHour">AlphaHour</string>
	<string name="object_msg_name">Subject</string>
	<string name="object_qr">QRCode</string>
	<string name="object_dynamic_qr">DynamicQR</string>
	<string name="strParam0">00.Reserved</string>
	<string name="strPrSpeedname">01.Speed</string>
	<string name="strDelay_key">delay_key</string>
	<string name="strDelayname">02.Delay</string>
	<string name="strDelay_summary">Set Delay</string>
	<string name="strParam3">03.Reserved</string>
	<string name="strTrigger_key">trigger_key</string>
	<string name="strTriggername">04.Trigger</string>
	<string name="strTrigger_summary">Trigger Mode</string>
	<string name="strDirection_key">direction_key</string>
	<string name="strSyncname">05.Encoder</string>
	<string name="strDirectionname">05.Sync</string>
	<string name="strBold">06.Bold</string>
	<string name="strFixlen">07.Length</string>
	<string name="strFixtime">08.Fix Time</string>
	<string name="strHeadTemp">09.Head Temp</string>
	<string name="strResvTemp">10.Box Temp</string>
	<string name="strfontwidth">11.fontWidth</string>
	<string name="strDirection_summary">Choose Direction</string>
	<string name="strEncoder_key">encoder</string>
	<string name="strEncodername">03.Encoder</string>
	<string name="strEncoder_summary">Set Encoder mode</string>
	<string name="strHoriRes_key">horires_key</string>
	<string name="strHoriResname">04.Hori</string>
	<string name="strHoriRes_summary">Setting Hori Res</string>
	<string name="strVertRes_key">vertres_key</string>
	<string name="strVertResname">05.Vert</string>
	<string name="strVertRes_summary">Setting Vert Res</string>
	<string name="str_file_save"> Ok </string>
	<string name="str_file_cancel">Cancel</string>
	<string name="str_column_index">index</string>
	<string name="str_column_pic1">pic1</string>
	<string name="str_column_pic2">pic2</string>
	<string name="str_column_pic3">pic3</string>
	<string name="str_column_pic4">pic4</string>
	<string name="str_column_text1">text1</string>
	<string name="str_column_text2">text2</string>
	<string name="str_column_text3">text3</string>
	<string name="str_column_text4">text4</string>
	<string name="str_column_text5">text5</string>
	<string name="str_column_text6">text6</string>
	<string name="str_column_text7">text7</string>
	<string name="str_column_text8">text8</string>
	<string name="str_column_text9">text9</string>
	<string name="str_column_text10">text10</string>
	<string name="str_column_text11">text11</string>
	<string name="str_column_text12">text12</string>
	<string name="str_column_text13">text13</string>
	<string name="str_column_text14">text14</string>
	<string name="str_column_text15">text15</string>
	<string name="str_column_text16">text16</string>
	<string name="str_radioUsb1">USB1</string>
	<string name="str_radioUsb2">USB2</string>
	<string name="str_radioSdcard">SDCard</string>
	<string name="str_notice_save">please input message name:</string>
	<string name="str_file_hint">file name</string>
	<string name="str_page_prev">PageUp</string>
	<string name="str_page_next">PageDown</string>
</resources>