<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<EditTextPreference  
    	android:dialogTitle="@string/strDelayname"  
    	android:key="@string/strDelay_key"  
    	android:defaultValue="0"
    	android:title="@string/strDelayname"
    	android:summary="@string/strDelay_summary"
  	/>
	<ListPreference  
    	android:dialogTitle="@string/strTriggername"  
    	android:key="@string/strTrigger_key"
    	android:title="@string/strTriggername"
    	android:entries="@array/trigger_mode_name"
    	android:entryValues="@array/trigger_mode_value"
    	android:negativeButtonText="@string/strNativeBtn"
    	android:summary="@string/strTrigger_summary"
    	android:defaultValue="0"
  	/>
	<ListPreference
	    android:key="@string/strDirection_key"
	    android:title="@string/strDirectionname"
	    android:dialogTitle="@string/strDirectionname"
	    android:summary="@string/strDirection_summary"
	    android:negativeButtonText="@string/strNativeBtn"
	    android:entries="@array/direction_name"
	    android:entryValues="@array/direction_value"
	    android:defaultValue="0"
	    />
	<ListPreference
	    android:key="@string/strEncoder_key"
	    android:title="@string/strEncodername"
	    android:dialogTitle="@string/strEncodername"
	    android:summary="@string/strEncoder_summary"
	    android:negativeButtonText="@string/strNativeBtn"
	    android:entries="@array/encoder_name"
	    android:entryValues="@array/encoder_value"
	    android:defaultValue="0"
	    />
	<ListPreference
	    android:key="@string/strHoriRes_key"
	    android:title="@string/strHoriResname"
	    android:dialogTitle="@string/strHoriResname"
	    android:summary="@string/strHoriRes_summary"
	    android:negativeButtonText="@string/strNativeBtn"
	    android:entries="@array/horires_name"
	    android:entryValues="@array/horires_value"
	    android:defaultValue="300"
	    />
	<ListPreference
	    android:key="@string/strVertRes_key"
	    android:title="@string/strVertResname"
	    android:dialogTitle="@string/strVertResname"
	    android:summary="@string/strVertRes_summary"
	    android:negativeButtonText="@string/strNativeBtn"
	    android:entries="@array/vertres_name"
	    android:entryValues="@array/vertres_value"
	    android:defaultValue="300"
	    />
</PreferenceScreen>