<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/item_selector"
    >
    
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_index"
	    android:layout_width="40dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_index"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_pic1"
	    android:layout_width="80dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_pic1"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_pic2"
	    android:layout_width="80dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_pic2"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_pic3"
	    android:layout_width="80dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_pic3"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_pic4"
	    android:layout_width="80dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_pic4"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text1"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_text1"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text2"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_text2"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text3"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_text3"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text4"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_text4"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text5"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_text5"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text6"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_text6"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text7"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_text7"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text8"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_text8"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text9"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_text9"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text10"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_text10"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text11"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_text11"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text12"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_text12"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text13"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_text13"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text14"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_text14"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text15"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:text="@string/str_column_text15"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:textColor="#000000"
	    />
	<View
	    android:layout_width="0.5px"
	    android:layout_height="fill_parent"
	    android:background="#B8B8B8"
	    android:visibility="visible" 
	    />
	
	<TextView
	    android:id="@+id/tv_text16"
	    android:layout_width="160dip"
	    android:layout_height="40dp"
	    android:textSize="20sp"
	    android:gravity="center"
	    android:text="@string/str_column_text16"
	    android:textColor="#000000"
	    />
</LinearLayout>
