<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="600dp"
    android:layout_height="350dp"
    android:background="@drawable/style_filelist"
    android:layout_gravity="center"
    >
    <TextView 
        android:id="@+id/notice_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="50dp"
        android:text="@string/str_notice_save"
        android:textColor="@color/black"
		android:textSize="40sp"
        />
    <EditText
        android:id="@+id/et_message_title"
        android:layout_width="450dp"
        android:layout_height="100dp"
        android:layout_below="@id/notice_message"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="75dp"
        android:singleLine="true"
        android:textSize="60sp"
        android:textColor="@color/black"
        android:hint="@string/str_file_hint"
        />
    
    <Button
        android:id="@+id/btn_message_ok"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:background="@drawable/bg_mid_button"
        android:layout_below="@id/et_message_title"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/str_file_save"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/btn_save_print"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:background="@drawable/bg_mid_button"
        android:layout_below="@id/et_message_title"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/btn_message_ok"
        android:text="@string/str_btn_saveprint"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/btn_message_cancel"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:background="@drawable/bg_mid_button"
        android:layout_alignTop="@id/btn_message_ok"
        android:layout_toRightOf="@id/btn_save_print"
        android:layout_marginLeft="15dp"
        android:text="@string/str_file_cancel"
        android:textSize="30sp"
        />
</RelativeLayout> 