<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:gravity="center"
    >

	<Button 
	    android:id="@+id/btn_confirm"
	    android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:background="@drawable/button_style"
	    android:textSize="25sp"
	    android:text="@string/str_ok"
	    />
	<Button
	    android:id="@+id/btn_objinfo_cnl"
	    android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_weight="1"
	    android:background="@drawable/button_style"
	    android:textSize="25sp"
	    android:text="@string/strNativeBtn"
	    />
	<Button
	    android:id="@+id/btn_delete"
	    android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_weight="1"
	    android:background="@drawable/button_style"
	    android:textSize="25sp"
	    android:text="@string/str_del"
	    />
	
</LinearLayout>
