<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="fill_parent"
    android:focusable="true"
	android:focusableInTouchMode="true"
	android:background="#DEDEDE"
    >
    
	<RadioGroup
	    android:id="@+id/file_dialog_path"
	    android:layout_width="fill_parent"
	    android:layout_height="60dp"
	    android:gravity="center"
	    android:orientation="horizontal"
	    android:background="#C7C7C7"
	    >
	    <RadioButton android:id="@+id/radio_usb1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:checked="true"
	        android:button="@null"
	        android:gravity="center"
	        android:enabled="false"
	        android:background="@drawable/file_browser_item"
	        android:text="@string/str_radioUsb1"
	        android:textColor="@color/gray"
	        android:textSize="30dp"
	        />
	    <RadioButton android:id="@+id/radio_usb2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:checked="false"
	        android:button="@null"
	        android:gravity="center"
	        android:enabled="false"
	        android:background="@drawable/file_browser_item"
	        android:text="@string/str_radioUsb2"
	        android:textColor="@color/gray"
	        android:textSize="30dp"
	        />
	    <RadioButton android:id="@+id/radio_sdcard"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:checked="false"
	        android:button="@null"
	        android:gravity="center"
	        android:enabled="false"
	        android:background="@drawable/file_browser_item"
	        android:text="@string/str_radioSdcard"
	        android:textColor="@color/gray"
	        android:textSize="30dp"
	        />
	    
	</RadioGroup>
	<LinearLayout 
	    android:id="@+id/input_area"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:orientation="horizontal"
	    >
	    <EditText
	    	android:id="@+id/name_input"
	    	android:layout_width="300dp"
	    	android:layout_height="60dp"
	    	android:singleLine="true"
	    	android:layout_weight="1"
	    	android:layout_gravity="center"
	    	android:imeOptions="flagNoExtractUi|actionDone"
	    />
	    
	    <Button
	        android:id="@+id/dialog_save"
	        android:layout_width="80dp"
	        android:layout_height="60dp"
			android:layout_weight="1"
			android:layout_gravity="center"
	        android:text="@string/str_file_save"
	        />
	    
	    <Button
	        android:id="@+id/dialog_cancel"
	        android:layout_width="80dp"
	        android:layout_height="60dp"
			android:layout_weight="1"
			android:layout_gravity="center"
	        android:text="@string/str_file_cancel"
	        />
	
	
	</LinearLayout>
	
	<ListView
	    android:id="@+id/file_list"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_below="@id/file_dialog_path"
	    android:layout_above="@id/input_area"
	    android:background="#ffffff"
	    />
	    
</RelativeLayout>